--- a/meeps.theme.css
+++ b/meeps.theme.css
@@ -1,11 +1,10 @@
 /**
- * @name Pyrite
- * @author LeafyLuigi
- * @version 0.1.6
+ * @name Meeps Theme
+ * @author KillaMeep#6288
+ * @version 1.0
  * @description Pyrite for BetterDiscord/BandagedBD
- * @source https://github.com/LeafyLuigi/discord-themes/tree/master/pyrite
- * @website https://github.com/LeafyLuigi/discord-themes/tree/master/pyrite
- * @invite W976FZS
+ * @source https://github.com/KillaMeep/discordfiles
+ * @website https://github.com/KillaMeep/discordfiles
  */
 
 /* Import Base */
