--- a/meeps.theme.css
+++ b/meeps.theme.css
@@ -2,6 +2,7 @@
  * @name Meeps Theme
  * @author KillaMeep#6288
  * @version 1.0
+ * @authorId 247075046659457024
  * @description Pyrite for BetterDiscord/BandagedBD but optimised for animated background use
  * @source https://github.com/KillaMeep/discordfiles
  * @website https://github.com/KillaMeep/discordfiles
