--- a/meeps.theme.css
+++ b/meeps.theme.css
@@ -3,9 +3,10 @@
  * @author KillaMeep#6288
  * @version 1.0
  * @authorId 247075046659457024
+ * @authorLink https://dsc.bio/killameep
  * @description Pyrite for BetterDiscord/BandagedBD but optimised for animated background use
  * @source https://github.com/KillaMeep/discordfiles
- * @website https://github.com/KillaMeep/discordfiles
+ * @website https://github.com/KillaMeep
  */
 /* just a shitty rewrite of pyrite.*/
 /* Import Base */
